# sunrisebot

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  crontab  fly.toml  fourmolu.yaml  sunrisebot-haskell.cabal
.github/workflows/: deploy.yaml
src/: Main.hs
